# tastytrade_sdk

./: .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CLAUDE.md  README-other.md  README.md  SUPPORT.md  docker-compose.yml  justfile  mypy.ini  postman_collection.json  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  telegraf.conf  vulture_whitelist.py
.architecture-review/: TT-126-redis-streams-migration-architecture-review.html  TT-131-architecture-review-plugin-architecture-review.html  TT-131-architecture-review-plugin-layouts.json
.claude/: settings.json  settings.local.json
.claude/agent-headers/: github-workflow.md  jira-workflow.md  ui-tester.md
.claude/agents/: dev-agent.md  epic-manager.md  github-workflow.md  jira-workflow.md  ui-tester.md
.claude/hooks/: stop_hook.sh  subagent_stop_hook.sh
.devcontainer/: CLAUDE_PERSISTENCE_SETUP.md  Dockerfile  README-personal-setup.md  devcontainer.json  devcontainer.local.json.example  docker-compose.yml  personal-setup.sh  quber-workflow.yaml  setup.sh  startup.sh  test-tokens.sh
.githooks/: pre-commit  pre-push
.github/workflows/: jira-transition.yml
.plan-review/: TT-126-redis-streams-migration-review.html  TT-130-resume-exact-authoring-session-in-plan-review-pty-bridge-review.html  TT-131-architecture-plugin-for-claude-plugins-marketplace-review.html  TT-132-event-driven-keepalive-review.html  TT-134-architecture-map-plugin-review.html  TT-137-pytest-warnings-cleanup-review.html  TT-138-gex-snapshot-review.html  TT-139-backend-data-collection-review.html
.plan-review/mockups/: TT-138-gex-viz-a.html  TT-138-gex-viz-b.html  TT-138-gex-viz-c.html  TT-138-gex-viz-d.html
config/: redisinsight-setup.sh  strategy_health.toml
deploy/: influxdb.yml  loki-config.yaml  telegraf.conf
deploy/visualizations/: spx-wip.json  spx.flux  spx.json
dev/: asyn_main.py  cli_playground.py  playground.ipynb  session.ipynb
dev/websockets/: client.py  code-review.md  dxlink_playground.py  server.py
devtools/: playground-context-mgr.ipynb  playground.ipynb  playground_candlesticks.ipynb  playground_plotly.ipynb  remember-me-walkthrough.ipynb
devtools/websockets/: code-review.md
docker/bifrost-design/: Dockerfile  bifrost-config.json
docker/bifrost-dev/: Dockerfile  bifrost-config.json
docs/: AGENTIC_CONFIGURATION.md  ARCHITECTURE.md  COVERAGE_STRATEGY.md  GITHUB_WORKFLOW_SPEC.md  ISSUES_SPEC.md  OBSERVABILITY.md  PR_EVIDENCE_CHECKLIST.md  PR_EVIDENCE_GUIDELINES.md  SERVICE_DISCOVERY.md  STREAMING_SERVICES.md  farscape.md  github_workflow.md  grafana_asyncio_trading_logging_guide.md  jira_workflow.md  pr_standards.md  signal_architecture.md  streaming_services.md  subscription_cli.md  trading_observability_spec_FINAL.md  trading_observability_spec_revised.md
docs/architecture-map/: README.md  _devserver.py  architecture_layouts.json  architecture_playground.html  market_data.json  raw_redis_data.json  trade_data.json  trade_explorer.html
docs/plans/: 2026-02-26-position-metrics-pipeline.md  REVIEW_TEMPLATE.md  TT-105-mcp-migration-review.html  TT-108-redis-streams-architectural-review-review.html  TT-117-strategy-classification-redis-streams-review.html  TT-126-redis-streams-migration-review.html  TT-127-living-next-turn-planning-portal-review.html  TT-127-planning-portal.md  TT-128-open-source-plan-review-plugin-review.html  TT-131-architecture-review-plugin.md  TT-132-event-driven-keepalive.md  TT-137-pytest-warnings-cleanup.md  TT-138-gex-snapshot.md  TT-138-liveness-probe-results.md  TT-138-spx-0dte-gex-snapshot.md  TT-147-lightweight-charts-v5-upgrade.md  TT-59-position-metrics-pipeline.md  TT-60-architecture-compare-layouts.json  TT-60-implementation-plan.md  TT-60-order-events-review.html  TT-60-order-events.md  TT-62-strategy-engine-review.html  TT-62-strategy-engine.md  TT-63-design-review.html  TT-64-architecture-compare.html  TT-64-reconnect-signal-refactor.md  TT-64-reconnect-signal-review.html  TT-65-account-streamer-reconnect-signal.md  TT-78-otlp-metrics-review.html  TT-79-live-fill-entry-credits-review.html  TT-83-architecture-compare.html  TT-83-implementation-plan.html  TT-85-architecture-compare.html  TT-85-architecture-diagram.html  TT-95-level-annotation-processor.html  insights-report.html  review-template.html
docs/requirements/: TT-106-bifrost-validation-findings.md  TT-106-github-capability-comparison.md  TT-106-mcp-subagent-architecture.md  spx_0dte_gex_snapshot_design_spec.md
notebooks/: metrics_tracker_demo.ipynb
notes/: 25.02.05_websocket-improvements.md  data.service.design.notes.md  event_preprocessing.md  next_steps.md  refactoring_notes.md
scripts/: backfill_influxdb.py  generate-bifrost-agents.sh  probe_futures_options.py  probe_futures_options_metadata.py  probe_rest_endpoints.py
src/devtools/: backtest_functional_test.py  playground_account_streamer.ipynb  playground_accounts.ipynb  playground_backtest.ipynb  playground_candlesticks.ipynb  playground_charts.ipynb  playground_live_btc_feed.ipynb  playground_md_feeds.ipynb  playground_metrics_tracker.ipynb  playground_order_events.ipynb  playground_plotly.ipynb  playground_redis.ipynb  playground_redis_pubsub.ipynb  playground_signal_persistence.ipynb  playground_signals.ipynb  playground_testbench.ipynb
src/notes/: Proposal.MD  devcontainer-improvements.md  subscription-improvements.md
src/tastytrade/: __init__.py  async_session.py  exceptions.py  intruments.py  logging.py  markets.py  messages.py  models.py  parsers.py  session.py  session_async.py  utilties.py
tests_functional/: test_chart_e2e.py
typings/influxdb_client/: __init__.pyi
unit_tests/: README.md  test_account_models.py  test_event_handler.py  test_orchestrator_reconnection.py  test_reconnection_workflow.py  test_snapshot_tracker.py
unit_tests/accounts/: test_account_messages.py  test_account_models.py  test_account_orchestrator.py  test_account_publisher.py  test_account_streamer.py  test_client_orders.py  test_fill_monitor.py  test_order_events.py  test_trade_chain.py  (+1 more)
(+223 files in other folders)
