# ============================================================================
# Project Metadata
# ============================================================================

[project]
name = "tastytrade"
version = "0.1.0"
description = "High-performance Python SDK for TastyTrade Open API with real-time market data processing"
authors = [{ name = "TastyTrade SDK Team" }]
readme = "README.md"
requires-python = ">=3.11"

# ============================================================================
# Dependencies
# ============================================================================

dependencies = [
    "click>=8.1.0",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "python-dotenv>=1.0.1",
    "injector>=0.22.0",
    "websockets>=14.1",
    "aiohttp>=3.11.2",
    "websocket>=0.2.1",
    "pydantic>=2.10.1",
    "polars[numpy,pandas,pyarrow]>=1.16.0",
    "plotly>=6.0.0",
    "influxdb-client>=1.48.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.8",
    "pydantic-settings>=2.7.1",
    "loguru>=0.7.3",
    "redis>=5.2.1",
    "hiredis>=3.1.0",
    "kaleido==0.1.0",
    "Pillow>=10.0.0",
    "nbformat>=4.2.0",
    "ipykernel>=6.30.0",
    "anywidget>=0.9.18",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "python-json-logger>=2.0.0",
    "pytz>=2024.1",
]

[project.scripts]
api = "tastytrade.api.main:start"
tasty-subscription = "tastytrade.subscription.cli:main"
tasty-signal = "tastytrade.signal.cli:main"
tasty-backtest = "tastytrade.backtest.cli:main"
tasty-chart = "tastytrade.charting.cli:main"

# Note: 'uv sync' includes dev group by default. Use 'uv sync --no-dev' for production-only installs.
[dependency-groups]
dev = [
    "altair>=5.5.0",
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "mypy>=1.17.0",
    "pandas-stubs>=2.3.0.250703",
    "playwright>=1.58.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.5",
    "types-pillow>=10.0.0",
    "types-pytz>=2025.2.0.20250516",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20250611",
]

# ============================================================================
# Build System
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # Flake8-bugbear
    "C4", # Flake8-comprehensions
]

ignore = [
    "E501",  # Line too long
    "E731",  # Lambda assignment
    "E402",
    "I001",
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "W291",  # Let formatter handle trailing whitespace
    "W293",  # Let formatter handle blank line whitespace
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/devtools/*.ipynb" = ["B018"]  # Bare expressions are idiomatic in notebooks
